--- a/TributePage.css
+++ b/TributePage.css
@@ -1,15 +1,43 @@
-#main,
-p {
+#title {
+  font-size: 400%;
+  width: 60vmax;
+}
+
+.center {
+  margin: auto;
+  padding: auto;
   text-align: center;
 }
-#img-caption {
-  text-align: center;
-}
-h2 {
-  text-align: center;
-}
+
 #image {
-  display: block;
-  max-width: 100%;
+  max-width: 70%;
   height: auto;
+  display: block;
+}
+
+
+@media only screen and (min-width:480px)
+{
+
+}
+
+@media only screen and (min-width:767px)
+{
+
+}
+
+@media only screen and (min-width:991px)
+{
+
+}
+
+@media only screen and (min-width:1200px)
+{
+.font {
+  padding: 0px 200px 15px 200px;
+      }
+}
+@media(orientation: landscape)
+{
+
 }
